--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 UCSC_Course_Planner/.idea/workspace.xml
 
 UCSC_Course_Planner/templates/dashboard copy.html
+
+UCSC_Course_Planner/.idea/libraries/Google_App_Engine_SDK.xml
+
+.todo.txt.swp
+
+Thumbs.db
